# geomath

./: .gitignore  .travis.yml  Cargo.toml  LICENSE  README.md
src/: common.rs  lib.rs  macros.rs  matrix.rs  point.rs  prelude.rs  trajectory.rs  vector.rs
