[package]
name = "geomath"
version = "0.2.1"
repository = "https://github.com/samiBendou/geomath/"
homepage = "https://github.com/samiBendou/geomath/"
documentation = "https://docs.rs/geomath/0.2.0/geomath"
authors = ["bendou <sami@dahoux.net>"]
categories = ["science"]
description = "Stack-allocated maths for geometry, simulation and computer graphics"
keywords = ["math", "vector", "matrix", "trajectory", "point"]
license-file = "LICENSE"
readme = "README.md"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
